; ModuleID = '/home/carl/AnghaBench/freebsd/libexec/rtld-elf/extr_debug.c_dump_relocations.c'
source_filename = "/home/carl/AnghaBench/freebsd/libexec/rtld-elf/extr_debug.c_dump_relocations.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dump_relocations(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32* @globallist_curr(i32* %4)
  store i32* %5, i32** %3, align 8
  br label %6

6:                                                ; preds = %12, %1
  %7 = load i32*, i32** %3, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %15

9:                                                ; preds = %6
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @dump_obj_relocations(i32* %10)
  br label %12

12:                                               ; preds = %9
  %13 = load i32*, i32** %3, align 8
  %14 = call i32* @globallist_next(i32* %13)
  store i32* %14, i32** %3, align 8
  br label %6

15:                                               ; preds = %6
  ret void
}

declare dso_local i32* @globallist_curr(i32*) #1

declare dso_local i32 @dump_obj_relocations(i32*) #1

declare dso_local i32* @globallist_next(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
